
2009-06-18: Version 1.6.7

- Backported from 1.7.2.

===================================
VDR Plugin 'femon' Revision History
===================================

2008-12-16: Version 1.7.0

- Updated for vdr-1.7.2.
- Added whitespace cleanups.
- Changed info window to use the channel source instead of the frontend
  type.
- Removed the "Show CA system" setup option.

2009-01-06: Version 1.7.1

- Fixed closing of frontend file handles (Thanks to Brendon Higgins for
  reporting this one).

2009-06-18: Version 1.7.2

- Cleaned up compilation warnings.
- Fixed font handling to be thread-safe.

2009-08-29: Version 1.7.3

- Removed OSD offset and height options.
- Added PES assembler.
- Added bitstream parsers for all codecs.

2009-09-04: Version 1.7.4

- Fixed H.264 bitstream parser.
- Added a mutex to receiver class.
- Added 1080/720/576/480 format symbols into status window.

2009-10-01: Version 1.7.5

- Changed H.264 parser to show display aspect ratio.
- Removed error logging from unimplemented ioctl functions.
- Removed bitstream parsing from Receive() method.
- Added Chinese translation (Thanks to NanFeng).

2010-02-01: Version 1.7.6

- Updated for vdr-1.7.12.
- Updated Estonian translation (Thanks to Arthur Konovalov).
- Added Lithuanian translation (Thanks to Valdemaras Pipiras).

2010-03-05: Version 1.7.7

- Updated for vdr-1.7.13.
- Added a setup option to downscale the OSD size.
- Updated Estonian translation (Thanks to Arthur Konovalov).

2010-06-23: Version 1.7.8

- Fixed device switching.
- Added preliminary support for LATM.
- Updated Italian translation (Thanks to Diego Pierotto).
- Fixed a crash in femon service (Thanks to Wolfgang Astleitner).

2010-12-27: Version 1.7.9

- Updated for vdr-1.7.16.
- Added Makefile depencency for objects.
- Fixed detection of replaying.
- Added support for LDFLAGS.

2011-05-15: Version 1.7.10

- Updated for vdr-1.7.18.
- Added scaling for symbols.

2011-xx-xx: Version 1.7.11

- Added cppcheck target into Makefile.