@@ -417,4 +417,6 @@ VDR Plugin 'femon' Revision History
 
 2011-xx-xx: Version 1.7.11
 
+- Updated for vdr-1.7.19: New API functions for signal strength
+  and quality used to provide information for the OSD.
 - Added cppcheck target into Makefile.
